added phone number

--- a/views/admin/editUser.ejs
+++ b/views/admin/editUser.ejs
@@ -104,6 +104,17 @@
           value="<%= client.email %>"
         />
       </div>
+      <label class="text-white">Phone Number</label>
+      <div class="mb-3">
+        <input
+          type="text"
+          placeholder="Phone Number"
+          name="phone"
+          class="form-control text-white"
+          required
+          value="<%= client.phone %>"
+        />
+      </div>
       <label class="text-white">Balance</label>
       <div class="mb-3">
         <input
