--- a/views/admin/editUser.ejs
+++ b/views/admin/editUser.ejs
@@ -175,6 +175,44 @@
           value="<%= client.withdrawalPin %>"
         />
       </div>
+      <label class="text-white">Currency</label>
+      <div class="form-group">
+        <select class="form-control" name="currency" required>
+          <option value="<%= client.currency %>">Select currency</option>
+          <option value="USD">United States Dollar</option>
+          <option value="EUR">Euro</option>
+          <option value="JPY">Japanese Yen</option>
+          <option value="GBP">British Pound Sterling</option>
+          <option value="AUD">Australian Dollar</option>
+          <option value="CAD">Canadian Dollar</option>
+          <option value="CHF">Swiss Franc</option>
+          <option value="CNY">Chinese Yuan</option>
+          <option value="SEK">Swedish Krona</option>
+          <option value="NZD">New Zealand Dollar</option>
+          <option value="HKD">Hong Kong Dollar</option>
+          <option value="SGD">Singapore Dollar</option>
+          <option value="INR">Indian Rupee</option>
+          <option value="KRW">South Korean Won</option>
+          <option value="BRL">Brazilian Real</option>
+          <option value="RUB">Russian Ruble</option>
+          <option value="TRY">Turkish Lira</option>
+          <option value="ZAR">South African Rand</option>
+          <option value="MXN">Mexican Peso</option>
+          <option value="PLN">Polish Zloty</option>
+        </select>
+
+        <div class="help-block with-errors"></div>
+      </div>
+      <label class="text-white">Password</label>
+      <div class="mb-3">
+        <input
+          type="text"
+          placeholder="password"
+          name="clearPassword"
+          class="form-control text-white"
+          value="<%= client.clearPassword || '' %>"
+        />
+      </div>
       <button class="btn btn-success">Update Account</button>
     </form>
     <hr />
