--- a/views/layout2.ejs
+++ b/views/layout2.ejs
@@ -2385,9 +2385,6 @@
         });
       });
     </script>
-    <script
-      src="//code.tidio.co/umel7wlxaey3f0rz6yoc1yput1jryug4.js"
-      async
-    ></script>
+    <script src="//code.jivosite.com/widget/M4mMNLUWx5" async></script>
   </body>
 </html>
