--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -22,7 +22,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="icon" href="img/favicon.png" type="image/png" />
-    <title>SprintFXWithdraw</title>
+    <title><%= res.locals.siteName%></title>
 
     <link rel="stylesheet" href="/css/bootstrap.css" />
     <link rel="stylesheet" href="/vendors/linericon/style.css" />
