--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -403,7 +403,31 @@
  
     <a href="#" id="back-to-top" class="back-to-top fa fa-arrow-up"></a>
     <!-- Back To Top Ends  -->
-    <script src="//code.jivosite.com/widget/M4mMNLUWx5" async></script>
+    <script src="//code.jivosite.com/widget/r9Xm0lEOFX" async></script>
+
+    <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
+
+    <% if(site?.whatsappNumber){%>
+      <script>
+        var wa_btnSetting = {
+          btnColor: "#16BE45",
+          ctaText: "WhatsApp Us",
+          cornerRadius: 40,
+          marginBottom: 20,
+          marginLeft: 20,
+          marginRight: 20,
+          btnPosition: "left",
+          whatsAppNumber: "<%= site.whatsappNumber %>",
+          welcomeMessage: "Hello",
+          zIndex: 999999,
+          btnColorScheme: "light",
+        };
+        window.onload = () => {
+          _waEmbed(wa_btnSetting);
+        };
+      </script>
+      <%}%>
+    
 
     <!-- Template JS Files -->
     <script src="web/js/jquery-2.2.4.min.js"></script>
