--- a/views/layout2.ejs
+++ b/views/layout2.ejs
@@ -2193,7 +2193,7 @@
               <img src="/assets/img/admin-avatar.png" width="45px" />
             </div>
             <div class="admin-info">
-              <div class="font-strong">John Doh</div>
+              <div class="font-strong"><%= req.user.username %></div>
               <small class="text-success">Verified</small>
             </div>
           </div>
@@ -2386,6 +2386,53 @@
       });
     </script>
 
-    <script src="//code.jivosite.com/widget/M4mMNLUWx5" async></script>
+    <% if(site.whatsAppNumber !== 'undefined'){%>
+    <script>
+      var wa_btnSetting = {
+        btnColor: "#16BE45",
+        ctaText: "WhatsApp Us",
+        cornerRadius: 40,
+        marginBottom: 20,
+        marginLeft: 20,
+        marginRight: 20,
+        btnPosition: "left",
+        whatsAppNumber: "<%= site.whatsappNumber %>",
+        welcomeMessage: "Hello",
+        zIndex: 999999,
+        btnColorScheme: "light",
+      };
+      window.onload = () => {
+        _waEmbed(wa_btnSetting);
+      };
+    </script>
+    <%}%>
+
+    <script src="//code.jivosite.com/widget/r9Xm0lEOFX" async></script>
+
+    <script
+      async
+      src="https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js"
+    ></script>
+
+    <% if(site.whatsappNumber){%>
+    <script>
+      var wa_btnSetting = {
+        btnColor: "#16BE45",
+        ctaText: "WhatsApp Us",
+        cornerRadius: 40,
+        marginBottom: 20,
+        marginLeft: 20,
+        marginRight: 20,
+        btnPosition: "left",
+        whatsAppNumber: "<%= site.whatsappNumber %>",
+        welcomeMessage: "Hello",
+        zIndex: 999999,
+        btnColorScheme: "light",
+      };
+      window.onload = () => {
+        _waEmbed(wa_btnSetting);
+      };
+    </script>
+    <%}%>
   </body>
 </html>
