--- a/views/layout3.ejs
+++ b/views/layout3.ejs
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>SprintFXWithdraw Dashboard</title>
+    <title>Dashboard</title>
     <!-- plugins:css -->
     <link
       rel="stylesheet"
