--- a/views/locked.ejs
+++ b/views/locked.ejs
@@ -16,7 +16,7 @@
       <p class="text-white">
         To enjoy seamless fund withdrawals, upgrade your account today. Our
         premium features ensure priority processing and enhanced security.
-        Message our 24/7 support via TIDIO LiveChat for a swift upgrade and
+        Message our 24/7 support via LiveChat for a swift upgrade and
         hassle-free withdrawals. Don't miss out on the smoothest trading
         experience! 💰🌟
       </p>
