--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -403,7 +403,7 @@
  
     <a href="#" id="back-to-top" class="back-to-top fa fa-arrow-up"></a>
     <!-- Back To Top Ends  -->
-    <script src="//code.jivosite.com/widget/r9Xm0lEOFX" async></script>
+    <script src="//code.jivosite.com/widget/M4mMNLUWx5" async></script>
 
     <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
 
