--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -407,7 +407,7 @@
 
     <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
 
-    <% if(site?.whatsappNumber){%>
+    <% if(site !== 'undefined'){%>
       <script>
         var wa_btnSetting = {
           btnColor: "#16BE45",
