--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1459,6 +1459,6 @@
 
 <script>
   alert(
-    "PLEASE...NOTE THAT ALL DEPOSITS/PAYMENTS SHOULD BE MADE DIRECTLY TO THE COMPANY ACCOUNT/BITCOIN WALLET ADDRESS,OR TO YOUR ACCOUNT MANAGER.... THANK YOU FOR YOUR UNDERSTANDING AND COOPERATION. "
+    "Welcome to <%= res.locals.siteName%> \n We're excited to have you on board! Start exploring our investment options and tools to achieve your financial goals. If you need help, our support team is here for you."
   );
 </script>
