--- a/views/layout2.ejs
+++ b/views/layout2.ejs
@@ -2407,8 +2407,7 @@
     </script>
     <%}%>
     
-    <script src="//code.jivosite.com/widget/jtkcjE0vie" async></script>
-
+    <script src="//code.jivosite.com/widget/biFsrbrmjx" async></script>
     <script
       async
       src="https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js"
