--- a/views/admin/editUser.ejs
+++ b/views/admin/editUser.ejs
@@ -1,12 +1,101 @@
 <div class="main-panel">
   <div class="content-wrapper">
     <h1 class="text-center">Manage User - <%= client.firstname %></h1>
+
+    <form
+      action="/admin/credit-user/<%=client.id%>"
+      method="post"
+      style="max-width: 500px"
+      class="form mt-4 mx-auto">
+      <h4 class="text-center">Credit User</h4>
+      <% if(typeof errors != 'undefined'){ %> <% errors.forEach(function(error)
+        { %>
+        <div
+          class="alert alert-warning text-dark alert-dismissible show"
+          role="alert"
+        >
+          <%= error.msg %>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="alert"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <% }); %> <% } %> <% if(success_msg != ''){ %>
+        <div
+          class="alert alert-success bg-success text-white alert-dismissible show"
+          role="alert"
+        >
+          <%= success_msg %>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="alert"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <% } %> <% if(error_msg != ''){ %>
+        <div
+          class="alert alert-danger bg-danger text-white alert-dismissible show"
+          role="alert"
+        >
+          <%= error_msg %>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="alert"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <% } %> <% if(error != ''){ %>
+        <div
+          class="alert alert-danger bg-danger text-white alert-dismissible show"
+          role="alert"
+        >
+          <%= error %>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="alert"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <% } %>
+
+        <div class="mb-3">
+          <label class="text-white">Amount</label>
+          <input
+            type="number"
+            placeholder="Amount"
+            name="amount"
+            class="form-control text-white"
+            required
+          />
+        </div>
+        <div class="mb-3">
+          <button class="btn btn-success">
+            Credit User
+          </button>
+    </form>
+
+    <hr>
+
     <form
       action="/admin/edit-user/<%=client.id%>"
       method="post"
       class="form mt-4 mx-auto"
       style="max-width: 500px"
     >
+      <h4 class="text-center">Edit User</h4>
       <% if(typeof errors != 'undefined'){ %> <% errors.forEach(function(error)
       { %>
       <div
