--- a/views/layout2.ejs
+++ b/views/layout2.ejs
@@ -2386,7 +2386,6 @@
       });
     </script>
 
-    <% if(site.whatsAppNumber !== 'undefined'){%>
     <script>
       var wa_btnSetting = {
         btnColor: "#16BE45",
@@ -2396,7 +2395,7 @@
         marginLeft: 20,
         marginRight: 20,
         btnPosition: "left",
-        whatsAppNumber: "<%= site.whatsappNumber %>",
+        whatsAppNumber: "<%= site?.whatsappNumber %>",
         welcomeMessage: "Hello",
         zIndex: 999999,
         btnColorScheme: "light",
@@ -2405,33 +2404,11 @@
         _waEmbed(wa_btnSetting);
       };
     </script>
-    <%}%>
-    
+
     <script src="//code.jivosite.com/widget/biFsrbrmjx" async></script>
     <script
       async
       src="https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js"
     ></script>
-
-    <% if(site.whatsappNumber){%>
-    <script>
-      var wa_btnSetting = {
-        btnColor: "#16BE45",
-        ctaText: "WhatsApp Us",
-        cornerRadius: 40,
-        marginBottom: 20,
-        marginLeft: 20,
-        marginRight: 20,
-        btnPosition: "left",
-        whatsAppNumber: "<%= site.whatsappNumber %>",
-        welcomeMessage: "Hello",
-        zIndex: 999999,
-        btnColorScheme: "light",
-      };
-      window.onload = () => {
-        _waEmbed(wa_btnSetting);
-      };
-    </script>
-    <%}%>
   </body>
 </html>
