--- a/views/layout2.ejs
+++ b/views/layout2.ejs
@@ -2405,7 +2405,8 @@
       };
     </script>
 
-    <script src="//code.jivosite.com/widget/biFsrbrmjx" async></script>
+    <script src="//code.jivosite.com/widget/jnbqnQgvKy" async></script>
+
     <script
       async
       src="https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js"
